# secure-programming-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  log_file_format.md  test_sodium.cpp  unencrypted_log_eg
log_core/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tmp.cpp
log_core/include/: actions.hpp  attendee.hpp  attendee_state.hpp  gallery.hpp  gallery_event.hpp  log_entry.hpp  log_entry_factory.hpp  log_entry_parser.hpp  log_entry_string_converter.hpp  log_entry_string_validater.hpp  log_file.hpp  log_file_stream.hpp  log_shared.hpp  regex_utils.hpp  string_utils.hpp  typedefs.hpp
log_core/include/factories/: log_entry_factory.hpp  log_file_factory.hpp
log_core/include/log_file/: log_file.hpp  log_file_cryptography_provider.hpp  log_file_reader.hpp  log_file_writer.hpp
log_core/include/utils/: custom_string_utils.hpp  regex_utils.hpp  string_utils.hpp
log_core/include2/: log_entry.hpp  log_file.hpp
log_core/src/: attendee.cpp  gallery.cpp  log_entry.cpp  log_entry_factory.cpp  log_entry_parser.cpp  log_file.cpp  log_file_cryptography_provider.cpp  log_file_reader.cpp  log_file_stream.cpp  log_file_writer.cpp  main.cpp
log_core/src2/: log_file.cpp
log_core/tests/: gallery_event_tests.cpp  gallery_tests.cpp  log_entry_factory_tests.cpp  log_entry_parser_tests.cpp  log_entry_tests.cpp  log_file_cryptography_provider_tests.cpp  log_file_tests.cpp  log_file_writer_tests.cpp  string_utils_tests.cpp
logappend/: CMakeLists.txt  actions.hpp  logappend.cpp  main.cpp
logappend/cmake/: Findsodium.cmake
logappend/include/: CommandLineLogEntry.hpp  log_action.hpp  log_append.hpp  log_append_flags.hpp  log_entry_command_line_parser.hpp
logappend/src/: log_append.cpp
logappend/tests/: log_append_test.cpp  log_append_tests.cpp
logread/: CMakeLists.txt  main.cpp
logread/include/: log_query_action.hpp  log_query_action_parser.hpp  log_read.hpp  log_read_flags.hpp
logread/src/: log_query_action.cpp  log_query_action_parser.cpp  log_read.cpp
scripts/: build_log_core_tests.sh  runtests.sh  sourceme.sh
shared/: attendee.hpp  attendee_state.hpp  gallery.hpp
